test/expected/opt_arith_const_prop_non_integer.out
[CompoundList]
  [CompoundListCondition, None]
    [Assign x=12]
  [CompoundListCondition, None]
    [Assign y=hello]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "$((x+1))"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "$((y+1))"]
[Word
  Unquoted "x=12"
]
[Word
  Unquoted "y=hello"
]
[Word
  Unquoted "echo"
]
[Word
  ArithmeticExpansion "x+1"
]
[Word
  Unquoted "echo"
]
[Word
  ArithmeticExpansion "y+1"
]
13
shit: 5:6: error: Unable to expand 'hello' because the parameter is not set.
     5 |  echo $((y+1))
       |       ^~~~~~~~ here.
note: Replace it with ${hello-} if empty expansion is desired.
